# kde-artwork-active

./: CMakeLists.txt  COPYING-GPL  resizePapers.sh  resizeSplashscreen.sh
lockscreen/: metadata.desktop
lockscreen/contents/ui/: SliderSwitch.qml  main.qml
splash/: Theme.rc  main.qml
splash/images/: busyindicator.svgz
src/: naturalsplash.svgz  naturalsplash.xcf  unlock.svgz
